--- a/Toronto Neighborhoods with Map.ipynb
+++ b/Toronto Neighborhoods with Map.ipynb
@@ -1478,20 +1478,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://api.foursquare.com/v2/venues/explore?&client_id=WP2RSEDCFVXVVOKEG3X0TCTNPFWOOWWYINV1NM4YHMIGCQ4V&client_secret=TIJEUO3TGKVMA1LK2VUHXIZHDYFB53FCPISJZO5ATQIZLNTC&v=20180605&ll=43.653963,-79.387207&radius=500&limit=2'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "\n",
@@ -1506,8 +1495,7 @@
     "    latitude, \n",
     "    longitude, \n",
     "    radius, \n",
-    "    LIMIT)\n",
-    "url # display URL"
+    "    LIMIT)"
    ]
   },
   {
