--- a/Toronto Neighborhoods with Map.ipynb
+++ b/Toronto Neighborhoods with Map.ipynb
@@ -1472,8 +1472,7 @@
     "\n",
     "CLIENT_ID = 'WP2RSEDCFVXVVOKEG3X0TCTNPFWOOWWYINV1NM4YHMIGCQ4V' # your Foursquare ID\n",
     "CLIENT_SECRET = 'TIJEUO3TGKVMA1LK2VUHXIZHDYFB53FCPISJZO5ATQIZLNTC' # your Foursquare Secret\n",
-    "VERSION = '20180605' # Foursquare API version\n",
-    "\n"
+    "VERSION = '20180605' # Foursquare API version\n"
    ]
   },
   {
