--- a/Toronto Neighborhoods with Map.ipynb
+++ b/Toronto Neighborhoods with Map.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -82,13 +82,14 @@
        "4      M5A  Downtown Toronto      Harbourfront"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import nbconvert\n",
     "\n",
     "tables = pd.read_html('https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M', header=0)\n",
     "\n",
@@ -1460,16 +1461,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "{\n",
-    "    \"tags\": [\n",
-    "        \"hidecode\",\n",
-    "    ]\n",
-    "}\n",
-    "\n",
+    "# @hidden_cell\n",
     "CLIENT_ID = 'WP2RSEDCFVXVVOKEG3X0TCTNPFWOOWWYINV1NM4YHMIGCQ4V' # your Foursquare ID\n",
     "CLIENT_SECRET = 'TIJEUO3TGKVMA1LK2VUHXIZHDYFB53FCPISJZO5ATQIZLNTC' # your Foursquare Secret\n",
     "VERSION = '20180605' # Foursquare API version\n"
